--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <body>
     <div class="top-container">
-      <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
+      <img class="top-cloud" src="Images/cloud.png" alt="cloud-img">
       <h1><em>I'm Roushan</em></h1>
       <h2>a <span class="web">web</span> designer.</h2>
-      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-      <img class="mountain" src="images/mountain1.png" alt="mountain-img">
+      <img class="bottom-cloud" src="Images/cloud.png" alt="cloud-img">
+      <img class="mountain" src="Images/mountain1.png" alt="mountain-img">
 
     </div>
     <div class="middle-container">
